Updated HTML and CSS

--- a/public/chiropractictreatment.html
+++ b/public/chiropractictreatment.html
@@ -122,16 +122,22 @@
         <hr>
         <address>
           <strong><span style="color:#13315C">Oberlin Clinic</span></strong>
-          <br>504 N Penn Ave
-          <br>Oberlin, KS 67749
-          <br>Phone: (785) 475-2219
-          <br>Fax: (785) 475-2219
+          <br><span style="color:#3E7CF9"><i class="fas fa-map-marker-alt"></i></span>&nbsp 504 N Penn Ave
+          Oberlin KS 67749 <a
+            href="https://www.google.com/maps/search/504+N+Penn+Ave+120+N+Scott+St+Oberlin,+KS+67749/@39.8227144,-100.5312894,17z/data=!3m1!4b1"
+            target="_blank"><br>(View
+            Map)</a>
+          <br><span style="color:#3E7CF9"><i class="fas fa-phone"></i></span>&nbsp Phone: (785) 475-2219
+          <br><span style="color:#3E7CF9"><i class="fas fa-fax"></i></span>&nbsp Fax: (785) 475-2219
         </address>
         <address>
           <strong><span style="color:#13315C">St. Francis Clinic</span></strong>
-          <br>120 N Scott St
-          <br>St. Francis, KS 67756
-          <br>Phone: (785) 332-2186
+          <br><span style="color:#3E7CF9"><i class="fas fa-map-marker-alt"></i></span>&nbsp 120 N Scott St
+          St. Francis KS 67756 <a
+            href="https://www.google.com/maps/place/120+N+Scott+St,+St+Francis,+KS+67756/@39.7750881,-101.8014507,17z/data=!4m13!1m7!3m6!1s0x877496a656b6cd91:0x316734b41ac7b6ca!2s120+N+Scott+St,+St+Francis,+KS+67756!3b1!8m2!3d39.7750463!4d-101.8012333!3m4!1s0x877496a656b6cd91:0x316734b41ac7b6ca!8m2!3d39.7750463!4d-101.8012333"
+            target="_blank"><br>(View
+            Map)</a>
+          <br><span style="color:#3E7CF9"><i class="fas fa-phone"></i></span>&nbspPhone: (785) 332-2186
         </address>
         <a class="btn btn-outline-primary mt-3 mb-3" href="./contactUs.html">View Available Office Hours &raquo;</a>
 
@@ -140,6 +146,22 @@
     </div>
   </div>
 
+  <!-- Business Callout -->
+  <div class="container-fluid mt-5 mx-auto">
+    <div class="row justify-content-center callout p-4">
+      <div class="col-sm text-center">
+        <h3 class="text-center"></i><span style="color:#FC9838">Start your journey to complete
+            wellness. Call us for an
+            appointment today.</span>
+        </h3>
+        <h5 class="text-white text-center">Oberlin Office: 785-475-2219</h5>
+        <h5 class="text-white text-center">St. Francis Clinic: 785-332-2186</h5>
+        <a class="btn btn-primary mt-3 mb-3" href="./contactUs.html" target="_blank">View Available Office Hours
+          &raquo;</a>
+      </div>
+    </div>
+  </div>
+  <!-- /Row -->
 
 
   <!-- Weather Widget -->
