--- a/public/contactUs.html
+++ b/public/contactUs.html
@@ -99,19 +99,21 @@
         <h2 class="mb-4">Oberlin Clinic</h2>
         <h4>Oberlin Office Address</h4>
         <address>
-          <p>504 N Penn Ave<br>
-            Oberlin, KS 67749<br>
-            Phone: (785) 475-2219<br>
-            Fax: (785) 475-2219</p>
+          <p><span style="color:#3E7CF9"><i class="fas fa-map-marker-alt"></i></span>&nbsp504 N Penn Ave,
+            Oberlin KS 67749<br>
+            <span style="color:#3E7CF9"><i class="fas fa-phone"></i></span>&nbspPhone: (785) 475-2219<br>
+            <span style="color:#3E7CF9"><i class="fas fa-fax"></i></span>&nbspFax: (785) 475-2219</p>
         </address>
         <h4>Oberlin Office Hours</h4>
-        <p><span style="color:#3E7CF9">Dr. Unger</span> is available: Monday PM-Tuesday all day and Thursday all
+        <p><span style="color:#3E7CF9"><i class="fas fa-user-md"></i></span>&nbsp Dr. Unger is available: Monday
+          PM-Tuesday all day and Thursday all
           day.<br>
-          <span style="color:#3E7CF9">Dr. Addleman</span> is available: Monday, Wednesday, Thursday AM, and Friday.</p>
+          <span style="color:#3E7CF9"><i class="fas fa-user-md"></i></span>&nbspDr. Addleman is available: Monday,
+          Wednesday, Thursday AM, and Friday.</p>
         <p><strong>Monday -</strong> 8:30 A.M. - 6:00 P.M.<br>
           <strong>Tuesday -</strong> 7:30 A.M. - 6:00 P.M.<br>
           <strong>Wednesday -</strong> 8:30 A.M. - 6:00 P.M.<br>
-          <strong>Thursday -</strong> 8:30 A.M. - 6:00 P.M.<br>
+          <strong>Thursday <span style="color:#3E7CF9"></span>-</strong> 8:30 A.M. - 6:00 P.M.<br>
           <strong>Friday -</strong> 8:30 A.M. - 4:00 P.M.<br>
           <strong>Two Saturdays a month - </strong> 8:30 A.M. - 4:00 P.M.</p><br>
 
@@ -145,14 +147,15 @@
         <h2 class="mb-4">St. Francis Clinic</h2>
         <h4>St. Francis Office Address</h4>
         <address>
-          <p>120 N Scott St<br>
-            St. Francis, KS 67756<br>
-            Phone: (785) 332-2186<br>
+          <p><span style="color:#3E7CF9"><i class="fas fa-map-marker-alt"></i></span>&nbsp120 N Scott St,
+            St. Francis KS 67756<br>
+            <span style="color:#3E7CF9"><i class="fas fa-phone"></i></span>&nbspPhone: (785) 332-2186<br>
             <br>
           </p>
         </address>
         <h4>St. Francis Office Hours</h4>
-        <p><span style="color:#3E7CF9">Dr. Unger</span> is available at this location:
+        <p><span style="color:#3E7CF9"><i class="fas fa-user-md"></i></span>&nbspDr. Unger is available at this
+          location:
           <p><strong>Monday -</strong> 8:30 A.M. - 12:00 P.M.<br>
             <strong>Wednesday -</strong> 1:00 P.M. - 5:00 P.M.<br>
             <strong>Friday -</strong> 8:30 A.M. - 3:00 P.M.<br>
