--- a/public/firstVisit.html
+++ b/public/firstVisit.html
@@ -71,7 +71,6 @@
       <div class="row h-100 align-items-center">
         <div class="col-lg-12">
           <h1 class=" mb-2 text-center" id="titlebar-heading">First Visit</h1>
-          <p class="lead text-center bold">What Can I Expect During My First Visit to a Chiropractor?</p>
           </p>
         </div>
       </div>
@@ -86,52 +85,48 @@
     <div class="row">
       <div class="col-md-8 mb-5">
         <img src="./pictures/DoctorVisit.jpg" class="img-responsive mb-4" style="width: 100%" alt="Doctor Visit">
-        <h2>Consultation</h2>
-        <p>On your first visit to our office you will be welcomed by our receptionist with a warm smile. You will then
-          be asked to fill out our required forms which will help us gain some information about yourself and your
-          spinal health. Save time by filling out the forms ahead of time. <a href="./patientdownloads.html">Click
-            Here!</a>
-
-          After reviewing your case history, you and the doctor will discuss your condition to determine if chiropractic
-          care may be of benefit to you. If we find that your condition would be better served by another physician, you
-          will be referred to a doctor that will be able to help you the most. However, if our doctor feels he can help
-          you, we will begin our examination with your consent. Through out this process, our focus is to help you
-          achieve your optimal health potential.</p>
-        </row>
-
-        <div class="row">
-          <div class="col-md-12 mt-5 p-5 bg-light">
-            <h2>Examination</h2>
-            <img src="./pictures/kirsten_lavers_headshot.jpg" class="rounded mb-4 mr-4 float-left img-responsive"
-              alt="Kirsten Lavers">
-            <p>After a thorough consultation with the doctor, you will undergo a chiropractic
-              examination. This will
-              include
-              testing your reflexes and range of motion as well as other standard orthopedic, neurologic, postural, and
-              physical examinations. From this, the doctor will gain valuable information regarding your condition and a
-              better understanding of how chiropractic can help you. If necessary, the doctor may recommend X-rays or
-              refer
-              you for additional testing procedures.</p>
-          </div>
+        <h2>What Can I Expect During My First Visit to a Chiropractor?</h2>
+        <div class="mt-5">
+          <h3>Consultation</h3>
+          <img src="./pictures/Sarah_greeting_2.jpg" class="rounded mb-4 mr-4 float-left img-responsive"
+            alt="Sara Greeting patient">
+          <p>On your first visit to our office you will be welcomed by our receptionist with a warm smile. You will then
+            be asked to fill out our required forms which will help us gain some information about yourself and your
+            spinal health. Save time by filling out the forms ahead of time.<a href="./patientdownloads.html"
+              target="_blank"> Click Here to dowload forms!</a> After reviewing your case history, you and the doctor
+            will discuss your condition to determine if
+            chiropractic
+            care may be of benefit to you. If we find that your condition would be better served by another physician,
+            you
+            will be referred to a doctor that will be able to help you the most. However, if our doctor feels he can
+            help
+            you, we will begin our examination with your consent. Through out this process, our focus is to help you
+            achieve your optimal health potential.</p>
         </div>
-
-        <div class="row">
-          <div class="col-md-12 p-5">
-            <h2>X-Ray</h2>
-            <img src="./pictures/kirsten_lavers_headshot.jpg" class="rounded mb-4 mr-4 float-left img-responsive"
-              alt="Kirsten Lavers">
-
-            <p>X-rays are sometimes required to get a full evaluation of a patient's condition. The need for X-ray is
-              considered on a case by case basis. However, if needed, our office has an on-site, state of the art x-ray
-              facility for your convenience.</p>
+        <div class="mt-5">
+          <h3>Examination</h3>
+          <img src="./pictures/checkup.jpg" class="rounded mb-4 mr-4 float-left img-responsive"
+            alt="Doctor with Clipboard">
+          <p>After a thorough consultation with the doctor, you will undergo a chiropractic
+            examination. This will
+            include
+            testing your reflexes and range of motion as well as other standard orthopedic, neurologic, postural, and
+            physical examinations. From this, the doctor will gain valuable information regarding your condition and a
+            better understanding of how chiropractic can help you. If necessary, the doctor may recommend X-rays or
+            refer
+            you for additional testing procedures.</p>
+          <div class="mt-5">
+            <h3>X-Ray</h3>
+            <img src="./pictures/xray.jpg" class="rounded mb-4 mr-4 float-left img-responsive"
+              alt="Doctor holding x-ray">
           </div>
-        </div>
-
-        <div class="row">
-          <div class="col-md-12 p-5 bg-light">
-            <h2>Spinal Adjustment</h2>
-            <img src="./pictures/kirsten_lavers_headshot.jpg" class="rounded mb-4 mr-4 float-left img-responsive"
-              alt="Kirsten Lavers">
+          <p>X-rays are sometimes required to get a full evaluation of a patient's condition. The need for X-ray is
+            considered on a case by case basis. However, if needed, our office has an on-site, state of the art x-ray
+            facility for your convenience.</p>
+          <div class="mt-5 float-left">
+            <h3>Spinal Adjustment</h3>
+            <img src="./pictures/spinal_adjustment.jpg" class="rounded mb-4 mr-4 float-left img-responsive"
+              alt="Spinal Adjustment">
             <p>If both you and the doctor decide that chiropractic care is appropriate, spinal adjustments will begin
               immediately. Other treatment may include low level laser, physical therapies , and/or soft tissue
               therapies.
@@ -139,32 +134,26 @@
               effective, alignment of the body is interactive with the patient; gentle enough for kids, yet able to
               restore
               function and movement for the athlete and senior.</p>
+            <div class="mt-5 float-left">
+              <h3>Home Instructions</h3>
+              <img src="./pictures/daily_instructions.jpg" class="rounded mb-4 mr-4 float-left img-responsive"
+                alt="Doctor with Checklist">
+              <p>Prior to leaving, patients will be given instructions on certain activities or procedures to be
+                conducted
+                at home. This may include ice or heat application instructions, avoidance of certain activities or
+                positions, as well as home exercises and/or stretches.</p>
+              <div class="mt-5 float-left">
+                <h3>Schedule Your Appointment</h3>
+                <img src="./pictures/calendar.jpg" class="rounded mb-4 mr-4 float-left img-responsive"
+                  alt="Calendar on Desk">
+                <p>You will be given a convenient appointment time for your follow-up visit. Generally speaking,
+                  patients
+                  are seen within 1-2 days and are provided with a complete review of findings.</p>
+              </div>
+            </div>
           </div>
         </div>
-
-        <div class="row">
-          <div class="col-md-12 p-5 ">
-
-            <h2>Home Instructions</h2>
-            <img src="./pictures/kirsten_lavers_headshot.jpg" class="rounded mb-4 mr-4 float-left img-responsive"
-              alt="Kirsten Lavers">
-            <p>Prior to leaving, patients will be given instructions on certain activities or procedures to be conducted
-              at home. This may include ice or heat application instructions, avoidance of certain activities or
-              positions, as well as home exercises and/or stretches.</p>
-          </div>
-        </div>
-
-        <div class="row">
-          <div class="col-md-12 mb-2 p-5 bg-light">
-            <h2>Schedule Your Appointment</h2>
-            <img src="./pictures/kirsten_lavers_headshot.jpg" class="rounded mb-4 mr-4 float-left img-responsive"
-              alt="Kirsten Lavers">
-
-            <p>You will be given a convenient appointment time for your follow-up visit. Generally speaking, patients
-              are seen within 1-2 days and are provided with a complete review of findings.</p>
-          </div>
-        </div>
-
+        </row>
       </div>
 
 
@@ -175,16 +164,22 @@
         <hr>
         <address>
           <strong><span style="color:#13315C">Oberlin Clinic</span></strong>
-          <br>504 N Penn Ave
-          <br>Oberlin, KS 67749
-          <br>Phone: (785) 475-2219
-          <br>Fax: (785) 475-2219
+          <br><span style="color:#3E7CF9"><i class="fas fa-map-marker-alt"></i></span>&nbsp 504 N Penn Ave
+          Oberlin KS 67749 <a
+            href="https://www.google.com/maps/search/504+N+Penn+Ave+120+N+Scott+St+Oberlin,+KS+67749/@39.8227144,-100.5312894,17z/data=!3m1!4b1"
+            target="_blank"><br>(View
+            Map)</a>
+          <br><span style="color:#3E7CF9"><i class="fas fa-phone"></i></span>&nbsp Phone: (785) 475-2219
+          <br><span style="color:#3E7CF9"><i class="fas fa-fax"></i></span>&nbsp Fax: (785) 475-2219
         </address>
         <address>
           <strong><span style="color:#13315C">St. Francis Clinic</span></strong>
-          <br>120 N Scott St
-          <br>St. Francis, KS 67756
-          <br>Phone: (785) 332-2186
+          <br><span style="color:#3E7CF9"><i class="fas fa-map-marker-alt"></i></span>&nbsp 120 N Scott St
+          St. Francis KS 67756 <a
+            href="https://www.google.com/maps/place/120+N+Scott+St,+St+Francis,+KS+67756/@39.7750881,-101.8014507,17z/data=!4m13!1m7!3m6!1s0x877496a656b6cd91:0x316734b41ac7b6ca!2s120+N+Scott+St,+St+Francis,+KS+67756!3b1!8m2!3d39.7750463!4d-101.8012333!3m4!1s0x877496a656b6cd91:0x316734b41ac7b6ca!8m2!3d39.7750463!4d-101.8012333"
+            target="_blank"><br>(View
+            Map)</a>
+          <br><span style="color:#3E7CF9"><i class="fas fa-phone"></i></span>&nbspPhone: (785) 332-2186
         </address>
         <a class="btn btn-outline-primary mt-3 mb-3" href="./contactUs.html">View Available Office Hours &raquo;</a>
 
@@ -193,7 +188,22 @@
     </div>
   </div>
 
-
+  <!-- Business Callout -->
+  <div class="container-fluid mt-5 mx-auto">
+    <div class="row justify-content-center callout p-4">
+      <div class="col-sm text-center">
+        <h3 class="text-center"></i><span style="color:#FC9838">Start your journey to complete
+            wellness. Call us for an
+            appointment today.</span>
+        </h3>
+        <h5 class="text-white text-center">Oberlin Office: 785-475-2219</h5>
+        <h5 class="text-white text-center">St. Francis Clinic: 785-332-2186</h5>
+        <a class="btn btn-primary mt-3 mb-3" href="./contactUs.html" target="_blank">View Available Office Hours
+          &raquo;</a>
+      </div>
+    </div>
+  </div>
+  <!-- /Row -->
 
   <!-- Weather Widget -->
 
