updated html and css

--- a/public/contactUs.html
+++ b/public/contactUs.html
@@ -95,7 +95,8 @@
     <!-- Oberlin Office -->
 
     <div class="row mt-5">
-      <div class="col-md-5 mb-5 pr-3">
+
+      <div class="col-md-5 mb-5 ">
         <h2 class="mb-4">Oberlin Clinic</h2>
         <h4>Oberlin Office Address</h4>
         <address>
@@ -128,7 +129,7 @@
         <!-- Get Directions -->
 
         <h4 class="mt-5">Oberlin Clinic Directions</h4>
-        <div class="embed-responsive embed-responsive-16by9">
+        <div class="embed-responsive embed-responsive-16by9 mb-5">
           <iframe
             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3064.225700031252!2d-100.53135254880837!3d39.824357079337425!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x879fe75357a3ea63%3A0xc362ca715da9e08f!2sUnger+Chiropractic!5e0!3m2!1sen!2sus!4v1553145178811"
             frameborder="0" width="100" style="border:0" allowfullscreen></iframe>
@@ -138,12 +139,12 @@
       <!-- / Oberline Office -->
 
 
-      <div class="col-md-2"></div>
+      <div class="col-2"></div>
 
 
       <!-- St. Francis Office -->
 
-      <div class="col-md-5 mb-5 pl-3 ">
+      <div class="col-md-5 mb-4">
         <h2 class="mb-4">St. Francis Clinic</h2>
         <h4>St. Francis Office Address</h4>
         <address>
