Added Lightbox effect to Before and After Images

--- a/public/beforeandafter.html
+++ b/public/beforeandafter.html
@@ -16,6 +16,8 @@
     integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous" />
   <!-- Own CSS -->
   <link rel="stylesheet" href="./css/index.css" />
+  <!-- Lightbox CSS -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ekko-lightbox/5.3.0/ekko-lightbox.css" />
 
 </head>
 
@@ -88,20 +90,24 @@
 
       <div class="col-md-8">
         <figure class="figure mb-5">
-          <img src="./pictures/SlimCo_1.jpg" class="figure-img img-fluid rounded data-toggle"
-            alt="A generic square placeholder image with rounded corners in a figure.">
-          <img src="./pictures/SlimCo_2.jpg" class="figure-img img-fluid rounded data-toggle"
-            alt="A generic square placeholder image with rounded corners in a figure.">
+          <a href="./pictures/SlimCo_1.jpg" data-toggle="lightbox" data-gallery="img-gallery">
+            <img src="./pictures/SlimCo_1.jpg" class="figure-img img-fluid rounded data-toggle"
+              alt="A generic square placeholder image with rounded corners in a figure."></a>
+          <a href="./pictures/SlimCo_2.jpg" data-toggle="lightbox" data-gallery="img-gallery">
+            <img src="./pictures/SlimCo_2.jpg" class="figure-img img-fluid rounded data-toggle"
+              alt="A generic square placeholder image with rounded corners in a figure."></a>
           <div class="row">
             <div class="col-12 align-self-start">SM before and after. <strong>9 treatments. 10.75 inches
                 lost.</strong></mark>
             </div>
           </div>
+
         </figure>
         <!-- Picture 3 -->
         <figure class="figure mb-5">
-          <img src="./pictures/SlimCo_3.jpg" class="figure-img img-fluid rounded data-toggle"
-            alt="A generic square placeholder image with rounded corners in a figure.">
+          <a href="./pictures/SlimCo_3.jpg" data-toggle="lightbox" data-gallery="img-gallery">
+            <img src="./pictures/SlimCo_3.jpg" class="figure-img img-fluid rounded data-toggle"
+              alt="A generic square placeholder image with rounded corners in a figure."></a>
           <div class="row">
             <div class="col-12 align-self-start">JR before and after. <strong>9 treatments. 8.50 inches
                 lost.</strong></mark>
@@ -110,8 +116,9 @@
         </figure>
         <!-- Picture 4 -->
         <figure class="figure mb-5">
-          <img src="./pictures/SlimCo_4.jpg" class="figure-img img-fluid rounded data-toggle"
-            alt="A generic square placeholder image with rounded corners in a figure.">
+          <a href="./pictures/SlimCo_4.jpg" data-toggle="lightbox" data-gallery="img-gallery">
+            <img src="./pictures/SlimCo_4.jpg" class="figure-img img-fluid rounded data-toggle"
+              alt="A generic square placeholder image with rounded corners in a figure."></a>
           <div class="row">
             <div class="col-12 align-self-start">LB before and after. <strong>9 treatments. 7.0 inches lost.</strong>
             </div>
@@ -119,8 +126,9 @@
         </figure>
         <!-- Picture 5 -->
         <figure class="figure mb-5">
-          <img src="./pictures/SlimCo_5.jpg" class="figure-img img-fluid rounded data-toggle"
-            alt="A generic square placeholder image with rounded corners in a figure.">
+          <a href="./pictures/SlimCo_5.jpg" data-toggle="lightbox" data-gallery="img-gallery">
+            <img src="./pictures/SlimCo_5.jpg" class="figure-img img-fluid rounded data-toggle"
+              alt="A generic square placeholder image with rounded corners in a figure."></a>
           <div class="row">
             <div class="col-12 align-self-start">RP before and after.<strong> 9 treatments. 9.25 inches lost.</strong>
             </div>
@@ -128,8 +136,9 @@
         </figure>
         <!-- Picture 7 -->
         <figure class="figure mb-5">
-          <img src="./pictures/SlimCo_6.jpg" class="figure-img img-fluid rounded data-toggle"
-            alt="A generic square placeholder image with rounded corners in a figure.">
+          <a href="./pictures/SlimCo_6.jpg" data-toggle="lightbox" data-gallery="img-gallery">
+            <img src="./pictures/SlimCo_6.jpg" class="figure-img img-fluid rounded data-toggle"
+              alt="A generic square placeholder image with rounded corners in a figure."></a>
           <div class="row">
             <div class="col-12 align-self-start">SK before and after. <strong>9 treatments. 6.75 inches lost.</strong>
             </div>
@@ -137,10 +146,12 @@
         </figure>
         <!-- Picture 8 -->
         <figure class="figure mb-5">
-          <img src="./pictures/SlimCo_7.jpg" class="figure-img img-fluid rounded data-toggle"
-            alt="A generic square placeholder image with rounded corners in a figure.">
-          <img src="./pictures/SlimCo_8.jpg" class="figure-img img-fluid rounded data-toggle"
-            alt="A generic square placeholder image with rounded corners in a figure.">
+          <a href="./pictures/SlimCo_7.jpg" data-toggle="lightbox" data-gallery="img-gallery">
+            <img src="./pictures/SlimCo_7.jpg" class="figure-img img-fluid rounded data-toggle"
+              alt="A generic square placeholder image with rounded corners in a figure."></a>
+          <a href="./pictures/SlimCo_8.jpg" data-toggle="lightbox" data-gallery="img-gallery">
+            <img src="./pictures/SlimCo_8.jpg" class="figure-img img-fluid rounded data-toggle"
+              alt="A generic square placeholder image with rounded corners in a figure."></a>
           <div class="row">
             <div class="col-12 align-self-start">TM before and after. <strong>9 treatments. 6.75 inches lost.</strong>
             </div>
@@ -314,7 +325,10 @@
 
   <!-- Own Javascript -->
   <script src="./js/index.js"></script>
-  </div>
+
+  <!-- Lightbox Javascript -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/ekko-lightbox/5.3.0/ekko-lightbox.js"></script>
+
 </body>
 
 
