--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,8 @@
     integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous" />
   <!-- Own CSS -->
   <link rel="stylesheet" href="./css/index.css" />
-
+  <!-- ekko lightbox css -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ekko-lightbox/5.3.0/ekko-lightbox.css" />
 </head>
 
 <body>
@@ -283,6 +284,8 @@
 
   <!-- Own Javascript -->
   <script src="./js/index.js"></script>
+
+
 </body>
 </div>
 
