Added new technique pages

--- a/public/allergyelimination.html
+++ b/public/allergyelimination.html
@@ -70,7 +70,8 @@
     <div class="container h-100">
       <div class="row h-100 align-items-center">
         <div class="col-lg-12">
-          <h1 class=" mb-2 text-center" id="titlebar-heading">Chiropractic Treatment</h1>
+          <h1 class=" mb-2 text-center" id="titlebar-heading">Allergy / Sensitivity Elimination<br> and Reprogramming
+            Technique (A/SERT)</h1>
           </p>
         </div>
       </div>
@@ -84,35 +85,40 @@
 
     <div class="row">
       <div class="col-md-8 mb-5 ">
-        <img src="./pictures/treatment.jpg" class="img-responsive mb-4" style="width: 100%"
-          alt="Chiropractor Treatment">
-        <h2>Chiropractic Treatment</h2>
-        <p>The doctor of chiropractic is a specialist in spinal musculoskeletal disorders. We are expertly trained to
-          diagnose and treat the many musculoskeletal injuries that may occur on the job, in sports, or in your daily
-          life.
-          Upon injury, the individual often alters the normal position or flexibility of the spinal vertebrae.
-          Chiropractic treatment is designed to restore normal alignment and thus minimize pain and suffering. Gentle
-          manipulative adjustments are often effective in rapidly returning the injured person to a productive status.
-          The doctor of chiropractic can also provide guidance with advice designed to reduce work-related injuries,
-          proper lifting procedures and therapeutic stretching exercises.</p>
+        <img src="./pictures/Allergy.jpg" class="img-responsive mb-4" style="width: 100%" alt="Woman blowing nose">
+        <h2>What is A/SERT?</h2>
+        <p> A/SERT (Allergy / Sensitivity Elimination and Reprogramming Technique) is a revolutionary treatment system
+          based on
+          the principles of Chiropractic, Acupuncture, and Applied Kinesiology (Muscle Response Testing). This technique
+          was developed by Dr. John Brimhall, and is a modification of NAET (Nambudripads Allergy Elimination Technique)
+          developed by Dr. Devi Nambudripad. This treatment, in conjunction with the 6 Steps To Wellness Protocol, can
+          bring about dramatic improvement -at times even total elimination- for all types of allergies. It is simple,
+          non-invasive and extremely effective. It is currently practiced by hundreds of health practitioners, including
+          MDs, nurses, acupuncturists, chiropractors, dentists, and, to some extent, allergy sufferers themselves.</p>
         <br>
-        <h2>Techniques Utilized:</h2>
-        <ul class="list-group">
-          <li><a href="./appliedkinesology.html">Applied Kinesiology (AK)</a></li>
-          <li><a href="./allergyelimination.html">Allergy/Sensitivity Elimination and Reprogramming Technique</a></li>
-          <li>Chromatherapy (Color)</li>
-          <li><a href="./lowlevellasertherapy.html">Low Level Laser Therapy</a></li>
-          <li><a href="./detoxificationtherapy.html">Detoxification Therapy (EB-305)</a></li>
-          <li>Electrical Muscle Stimulation</li>
-          <li>Emotional Therapy</li>
-          <li>Eyelight Therapy</li>
-          <li>Magnetic Field Therapy</li>
-          <li>Myofascial Release</li>
-          <li>Neurofeedback</li>
-          <li><a href="./nutritionalconsultation.html">Nutritional consultation</a></li>
-          <li>Ultrasound</li>
-          <li>Orthotics</li>
-        </ul>
+        <h2>How does A/SERT work?</h2>
+        <p>How does A/SERT work? A/SERT is based on the recognition that all things, animate and inanimate, in our
+          universe have their own specific electromagnetic fields due to their atomic and molecular makeup, and that
+          these fields affect each other. This is true for our bodies, rocks, pollen, mold, peanut butter, a flower,
+          water, in short, everything. This electromagnetic energy is associated with meridians (energy pathways) in
+          acupuncture, chi in Chinese Medicine, and can be demonstrated with Kirlian photography. Nuclear physicists can
+          determine the type of atom by its electromagnetic frequency. According to Dr. Devi Nambudripad, this is what
+          happens: Your energy system and brain interpret a particular substance (a diamond ring, a whole wheat bagel, a
+          peanut, hot water, sun light) as potentially harmful to your body, and your body reacts. For other people this
+          same item is totally harmless. Your energy pathways freeze up as a way of defending the body against this
+          unsuitable substance. This in turn blocks your energy meridians and, if this condition continues, the overall
+          functioning of your body suffers.</p>
+        <br>
+        <h2>A/SERT Desensitization</h2>
+        <p>The A/SERT practitioner stimulates key points along the patientÕs spine while the patient is holding the
+          allergen. The doctor stimulates certain meridian points, specific organs and lobes of the brain with a Low
+          Level Laser. A chemical change takes place in the autonomic nervous system, neutralizing any allergic reaction
+          to the substance. A/SERT reprograms the brain and the nervous system, and eliminates your bodys conditioned
+          response to the allergen. Environmental medicine has been dealing with hidden allergies for several decades.
+          You try to avoid the allergenic substance in your life, you go on a rotation diet, and maybe you can manage.
+          But with A/SERT you can continue to have contact with the very substance that made you sick.</p>
+        <a class="btn btn-outline-primary mt-3 mb-3" href="./chiropractictreatment.html">Back to Chiropractic Treatments
+          &raquo;</a>
       </div>
 
       <!-- Sidebar -->
