--- a/public/lowlevellasertherapy.html
+++ b/public/lowlevellasertherapy.html
@@ -70,7 +70,7 @@
     <div class="container h-100">
       <div class="row h-100 align-items-center">
         <div class="col-lg-12">
-          <h1 class=" mb-2 text-center" id="titlebar-heading">Chiropractic Treatment</h1>
+          <h1 class=" mb-2 text-center" id="titlebar-heading">Low Level Laser Therapy</h1>
           </p>
         </div>
       </div>
@@ -84,35 +84,52 @@
 
     <div class="row">
       <div class="col-md-8 mb-5 ">
-        <img src="./pictures/treatment.jpg" class="img-responsive mb-4" style="width: 100%"
-          alt="Chiropractor Treatment">
-        <h2>Chiropractic Treatment</h2>
-        <p>The doctor of chiropractic is a specialist in spinal musculoskeletal disorders. We are expertly trained to
-          diagnose and treat the many musculoskeletal injuries that may occur on the job, in sports, or in your daily
-          life.
-          Upon injury, the individual often alters the normal position or flexibility of the spinal vertebrae.
-          Chiropractic treatment is designed to restore normal alignment and thus minimize pain and suffering. Gentle
-          manipulative adjustments are often effective in rapidly returning the injured person to a productive status.
-          The doctor of chiropractic can also provide guidance with advice designed to reduce work-related injuries,
-          proper lifting procedures and therapeutic stretching exercises.</p>
+        <img src="./pictures/KneePain.jpg" class="img-responsive mb-4" style="width: 100%" alt="man holding knee">
+        <h2>Low Level Laser Therapy</h2>
+        <p>The Erchonia cold laser device has gained recent FDA approval for the non-surgical treatment of neck and
+          shoulder complaints and is being used widely in the NFL and by the USPS tour de France team chiropractor.
+        </p>
         <br>
-        <h2>Techniques Utilized:</h2>
-        <ul class="list-group">
-          <li><a href="./appliedkinesology.html">Applied Kinesiology (AK)</a></li>
-          <li><a href="./allergyelimination.html">Allergy/Sensitivity Elimination and Reprogramming Technique</a></li>
-          <li>Chromatherapy (Color)</li>
-          <li><a href="./lowlevellasertherapy.html">Low Level Laser Therapy</a></li>
-          <li><a href="./detoxificationtherapy.html">Detoxification Therapy (EB-305)</a></li>
-          <li>Electrical Muscle Stimulation</li>
-          <li>Emotional Therapy</li>
-          <li>Eyelight Therapy</li>
-          <li>Magnetic Field Therapy</li>
-          <li>Myofascial Release</li>
-          <li>Neurofeedback</li>
-          <li><a href="./nutritionalconsultation.html">Nutritional consultation</a></li>
-          <li>Ultrasound</li>
-          <li>Orthotics</li>
-        </ul>
+        <p>When the body has an injury the cells are damaged and fail to function within normal parameters. Low level
+          lasers penetrate deeply into the skin and work by restoring this abnormal cellular function. Physiologic
+          effects include improved metabolism, circulation and tissue healing.
+        </p>
+        <h2>Laser therapy may be useful to you if you have any of the following:</h2><img src="./pictures/laser_2.jpg"
+          class="float-right mx-auto d-block bodylight-image img-responsive" alt="Low level laser device">
+        <p class="bold"><i class="fa fa-check"></i>
+          <span style="color:#3E7CF9">tendonitis</span><br>
+          <i class="fa fa-check"></i>
+          <span style="color:#3E7CF9">frozen shoulder</span><br>
+          <i class="fa fa-check"></i>
+          <span style="color:#3E7CF9">fractures</span><br>
+          <i class="fa fa-check"></i>
+          <span style="color:#3E7CF9">post-operative wounds</span><br>
+          <i class="fa fa-check"></i>
+          <span style="color:#3E7CF9">sprain-strains</span><br>
+          <i class="fa fa-check"></i>
+          <span style="color:#3E7CF9">scar tissue</span><br>
+          <i class="fa fa-check"></i>
+          <span style="color:#3E7CF9">autoimmune diseases</span><br>
+          <i class="fa fa-check"></i>
+          <span style="color:#3E7CF9">chronic or acute pain</span><br>
+          <i class="fa fa-check"></i>
+          <span style="color:#3E7CF9"> wound healing</span><br>
+          <i class="fa fa-check"></i>
+          <span style="color:#3E7CF9">arthritis</span><br>
+          <i class="fa fa-check"></i>
+          <span style="color:#3E7CF9"> migraines</span><br>
+          <i class="fa fa-check"></i>
+          <span style="color:#3E7CF9">disc herniations</span><br>
+          <i class="fa fa-check"></i>
+          <span style="color:#3E7CF9">minor nerve damage</span><br>
+          <i class="fa fa-check"></i>
+          <span style="color:#3E7CF9">carpal tunnel syndrome</span><br>
+          <i class="fa fa-check"></i>
+          <span style="color:#3E7CF9"> heavy metal detoxification</span><br>
+        </p>
+        <a class="btn btn-outline-primary mt-3 mb-3" href="./chiropractictreatment.html">Back to Chiropractic Treatments
+          &raquo;</a>
+        <br>
       </div>
 
       <!-- Sidebar -->
