--- a/public/appliedkinesology.html
+++ b/public/appliedkinesology.html
@@ -70,7 +70,7 @@
     <div class="container h-100">
       <div class="row h-100 align-items-center">
         <div class="col-lg-12">
-          <h1 class=" mb-2 text-center" id="titlebar-heading">Chiropractic Treatment</h1>
+          <h1 class=" mb-2 text-center" id="titlebar-heading">Applied Kinesiology</h1>
           </p>
         </div>
       </div>
@@ -84,35 +84,25 @@
 
     <div class="row">
       <div class="col-md-8 mb-5 ">
-        <img src="./pictures/treatment.jpg" class="img-responsive mb-4" style="width: 100%"
-          alt="Chiropractor Treatment">
-        <h2>Chiropractic Treatment</h2>
-        <p>The doctor of chiropractic is a specialist in spinal musculoskeletal disorders. We are expertly trained to
-          diagnose and treat the many musculoskeletal injuries that may occur on the job, in sports, or in your daily
-          life.
-          Upon injury, the individual often alters the normal position or flexibility of the spinal vertebrae.
-          Chiropractic treatment is designed to restore normal alignment and thus minimize pain and suffering. Gentle
-          manipulative adjustments are often effective in rapidly returning the injured person to a productive status.
-          The doctor of chiropractic can also provide guidance with advice designed to reduce work-related injuries,
-          proper lifting procedures and therapeutic stretching exercises.</p>
+        <img src="./pictures/applied_kinesiology_2.jpg" class="img-responsive mb-4" style="width: 100%"
+          alt="Kinesiology Treatment">
+        <h2>Applied Kinesiology (AK)</h2>
+        <p>Applied Kinesiology (AK), developed by Dr. George Goodheart in 1964, uses bioenergetic feedback through
+          testing the strength of various muscles in the body. This highly individualized, in-depth sytem of analysis,
+          allows the doctor to assess various aspects of a patient's state of health by evaluating and treating postural
+          and muscular imbalances, neurovascular and neurolymphatic points, subluxation, cranial-sacral movement,
+          acupuncture meridians and nutritional status. This is a highly effective treatment system which focuses on
+          whole body care.</p>
         <br>
-        <h2>Techniques Utilized:</h2>
-        <ul class="list-group">
-          <li><a href="./appliedkinesology.html">Applied Kinesiology (AK)</a></li>
-          <li><a href="./allergyelimination.html">Allergy/Sensitivity Elimination and Reprogramming Technique</a></li>
-          <li>Chromatherapy (Color)</li>
-          <li><a href="./lowlevellasertherapy.html">Low Level Laser Therapy</a></li>
-          <li><a href="./detoxificationtherapy.html">Detoxification Therapy (EB-305)</a></li>
-          <li>Electrical Muscle Stimulation</li>
-          <li>Emotional Therapy</li>
-          <li>Eyelight Therapy</li>
-          <li>Magnetic Field Therapy</li>
-          <li>Myofascial Release</li>
-          <li>Neurofeedback</li>
-          <li><a href="./nutritionalconsultation.html">Nutritional consultation</a></li>
-          <li>Ultrasound</li>
-          <li>Orthotics</li>
-        </ul>
+        <p>AK allows the skilled health practitioner to evaluate functional illness, which typically precedes disease.
+          This highly individualized, in-depth sytem of analysis, allows the doctor to assess various aspects of a
+          patient's state of health by evaluating and treating postural and muscular imbalances, neurovascular and
+          neurolymphatic points, subluxation, cranial-sacral movement, acupuncture meridians and nutritional status.
+          This is a highly effective treatment system which focuses on whole body care. AK enables health investigation
+          without intrusion. AK gives insight into the underlying causes and solutions to many functional health
+          problems.</p>
+        <a class="btn btn-outline-primary mt-3 mb-3" href="./chiropractictreatment.html">Back to Chiropractic Treatments
+          &raquo;</a>
       </div>
 
       <!-- Sidebar -->
