--- a/public/detoxificationtherapy.html
+++ b/public/detoxificationtherapy.html
@@ -70,7 +70,7 @@
     <div class="container h-100">
       <div class="row h-100 align-items-center">
         <div class="col-lg-12">
-          <h1 class=" mb-2 text-center" id="titlebar-heading">Chiropractic Treatment</h1>
+          <h1 class=" mb-2 text-center" id="titlebar-heading">Detoxification Therapy</h1>
           </p>
         </div>
       </div>
@@ -84,35 +84,39 @@
 
     <div class="row">
       <div class="col-md-8 mb-5 ">
-        <img src="./pictures/treatment.jpg" class="img-responsive mb-4" style="width: 100%"
-          alt="Chiropractor Treatment">
-        <h2>Chiropractic Treatment</h2>
-        <p>The doctor of chiropractic is a specialist in spinal musculoskeletal disorders. We are expertly trained to
-          diagnose and treat the many musculoskeletal injuries that may occur on the job, in sports, or in your daily
-          life.
-          Upon injury, the individual often alters the normal position or flexibility of the spinal vertebrae.
-          Chiropractic treatment is designed to restore normal alignment and thus minimize pain and suffering. Gentle
-          manipulative adjustments are often effective in rapidly returning the injured person to a productive status.
-          The doctor of chiropractic can also provide guidance with advice designed to reduce work-related injuries,
-          proper lifting procedures and therapeutic stretching exercises.</p>
+        <img src="./pictures/Detox.jpg" class="img-responsive mb-4" style="width: 100%" alt="Feet in water">
+        <h2>EB-Pro™ Energy Balancer™ Device</h2>
+        <p>The EB-Pro is the world’s most advanced ion therapy system available to date. It facilitates the body’s
+          natural homeostasis, and helps in its detoxification processes.
+        </p>
         <br>
-        <h2>Techniques Utilized:</h2>
-        <ul class="list-group">
-          <li><a href="./appliedkinesology.html">Applied Kinesiology (AK)</a></li>
-          <li><a href="./allergyelimination.html">Allergy/Sensitivity Elimination and Reprogramming Technique</a></li>
-          <li>Chromatherapy (Color)</li>
-          <li><a href="./lowlevellasertherapy.html">Low Level Laser Therapy</a></li>
-          <li><a href="./detoxificationtherapy.html">Detoxification Therapy (EB-305)</a></li>
-          <li>Electrical Muscle Stimulation</li>
-          <li>Emotional Therapy</li>
-          <li>Eyelight Therapy</li>
-          <li>Magnetic Field Therapy</li>
-          <li>Myofascial Release</li>
-          <li>Neurofeedback</li>
-          <li><a href="./nutritionalconsultation.html">Nutritional consultation</a></li>
-          <li>Ultrasound</li>
-          <li>Orthotics</li>
-        </ul>
+        <p>In today’s world, we are exposed to a multitude of toxins everywhere we go. Air pollution, food
+          preservatives, carcinogens, and chemicals in the water we drink and the cleaning products we use all
+          accumulate in the body. Individually, they might not have a great effect, but added up through time these
+          toxins can cause health problems, lack of energy, and a general lack of well-being.</p>
+        <br>
+        <p>The body has a natural detox process: sweating. One of the benefits of going to a sauna, aside from relaxing
+          after a pleasant back massage, is to sweat out all the toxins in your body. Unfortunately, many people don’t
+          have the time to go to a sauna or engage in sweat-inducing activities on a regular basis. That is when ion
+          therapy and the EB-Pro ionic footbath system come in.</p>
+        <br>
+        <img src="./pictures/EBPro.jpg" class="float-right mx-auto d-block bodylight-image img-responsive"
+          alt="EB Pro detox device">
+        <p>The EB-Pro works by ionizing the bathwater and sending a small, charged current through your body, which
+          generates positively charged ions. This increased ion field serves to neutralize the negatively charged
+          toxins
+          in the body, which are then expelled via the thousands of pores located on your feet.</p>
+        <br>
+        <p>Using the EB-Pro Ion Therapy System takes only a few minutes and it is safe for persons of all ages.
+          Regular
+          ionic therapy footbaths enhance your immune system, help your body recover faster from injuries and
+          surgeries,
+          and relieve pain and joint stiffness. To learn more about ionic therapy and the EB-Pro, visit the website
+          below.
+        </p>
+        <a class="btn btn-outline-primary mt-3 mb-3" href="./chiropractictreatment.html">Back to Chiropractic
+          Treatments
+          &raquo;</a>
       </div>
 
       <!-- Sidebar -->
