--- a/public/nutritionalconsultation.html
+++ b/public/nutritionalconsultation.html
@@ -70,7 +70,7 @@
     <div class="container h-100">
       <div class="row h-100 align-items-center">
         <div class="col-lg-12">
-          <h1 class=" mb-2 text-center" id="titlebar-heading">Chiropractic Treatment</h1>
+          <h1 class=" mb-2 text-center" id="titlebar-heading">Nutritional Consultation</h1>
           </p>
         </div>
       </div>
@@ -84,35 +84,27 @@
 
     <div class="row">
       <div class="col-md-8 mb-5 ">
-        <img src="./pictures/treatment.jpg" class="img-responsive mb-4" style="width: 100%"
-          alt="Chiropractor Treatment">
-        <h2>Chiropractic Treatment</h2>
-        <p>The doctor of chiropractic is a specialist in spinal musculoskeletal disorders. We are expertly trained to
-          diagnose and treat the many musculoskeletal injuries that may occur on the job, in sports, or in your daily
-          life.
-          Upon injury, the individual often alters the normal position or flexibility of the spinal vertebrae.
-          Chiropractic treatment is designed to restore normal alignment and thus minimize pain and suffering. Gentle
-          manipulative adjustments are often effective in rapidly returning the injured person to a productive status.
-          The doctor of chiropractic can also provide guidance with advice designed to reduce work-related injuries,
-          proper lifting procedures and therapeutic stretching exercises.</p>
+        <img src="./pictures/000801_0357_0162_tsls_op_616x405.jpg" class="img-responsive mb-4" style="width: 100%"
+          alt="Nutritional Supplements">
+        <h2>Nutritional Counseling</h2>
+        <p>Nutritional counseling appointments are available in office or by phone. All of our programs consist of high
+          quality nutritional lines which can be shipped directly to your location.
+        </p>
         <br>
-        <h2>Techniques Utilized:</h2>
-        <ul class="list-group">
-          <li><a href="./appliedkinesology.html">Applied Kinesiology (AK)</a></li>
-          <li><a href="./allergyelimination.html">Allergy/Sensitivity Elimination and Reprogramming Technique</a></li>
-          <li>Chromatherapy (Color)</li>
-          <li><a href="./lowlevellasertherapy.html">Low Level Laser Therapy</a></li>
-          <li><a href="./detoxificationtherapy.html">Detoxification Therapy (EB-305)</a></li>
-          <li>Electrical Muscle Stimulation</li>
-          <li>Emotional Therapy</li>
-          <li>Eyelight Therapy</li>
-          <li>Magnetic Field Therapy</li>
-          <li>Myofascial Release</li>
-          <li>Neurofeedback</li>
-          <li><a href="./nutritionalconsultation.html">Nutritional consultation</a></li>
-          <li>Ultrasound</li>
-          <li>Orthotics</li>
-        </ul>
+        <h2>Nutritional Supplementation</h2>
+        <p><img src="./pictures/br_logo_nutriwest.gif" class="float-left mr-3">Nutri-West: Available only through
+          licensed
+          healthcare
+          practitioners, Nutri-West products are made to the
+          industry's most exacting standards. Each of the more than 3,800 raw materials used in these formulations
+          undergo regular and random lab analysis to ensure purity and potency. These rigorous standards have earned
+          Nutri-West Wyoming's coveted blue-ribbon award for drug manufacturing excellence. Unlike the typical
+          commercially available products these supplements are formulated to guarantee results. We firmly stand behind
+          these products and have seen amazing results in many of our patients. For more information on this product
+          line go to www.nutriwest.com.</p>
+
+        <a class="btn btn-outline-primary mt-3 mb-3" href="./chiropractictreatment.html">Back to Chiropractic Treatments
+          &raquo;</a>
       </div>
 
       <!-- Sidebar -->
